# ITSec-Rust

./: README.md
axum-hello-world/: .gitignore  Cargo.toml  README.md  flake.nix
axum-hello-world/migrations/: 20230919065819_text.sql
axum-hello-world/src/: main.rs  persistence.rs
axum-rustls/: Cargo.toml
axum-rustls/cert/: cert.pem  key.pem  rootCA.crt  rootCA.key
axum-rustls/src/: main.rs
leptos-xss-demo/: Cargo.toml  README.md
leptos-xss-demo/src/: app.rs  main.rs
