[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.1", features = [
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
] }
tokio = { version = "1.0", features = ["full"] }
