[package]
name = "axum-rustls"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
hyper = { version = "0.14", features = ["full"] }
rustls-pemfile = "1.0.3"
tokio = { version = "1.33", features = ["full"] }
tokio-rustls = "0.24.1"
tower = { version = "0.4", features = ["make"] }
webpki-roots = "0.25.2"
